Issue #28480: Avoid label at end of compound statement --without-threads